[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["uglyboy <uglyboy@uglyboy.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.9.0.post0"
stevedore = "^5.2.0"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
pydantic = "^2.6.4"
gotify = "^0.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[tool.poetry.plugins."todo.project"]
init = "todo.custom:Init"
done = "todo.plugins:Done"
update = "todo.plugins:Update"
unfinished = "todo.plugins:DueUnfinished"
alert = "todo.plugins:Alert"
time_filter = "todo.plugins:TimeFilter"
date_filter = "todo.plugins:DateFilter"
weather_filter = "todo.plugins:WeatherFilter"
fetch_date = "todo.plugins:DateFetcher"
fetch_weather = "todo.plugins:WeatherFetcher"
webhook = "todo.plugins:Webhook"
imap = "todo.plugins:IMAP"
notify = "todo.plugins:Notify"
gotify = "todo.plugins:Gotify"
email = "todo.plugins:Email"

[tool.poetry.plugins."todo.project.SYSTEM"]
sysinit = "todo.custom:SysInit"
archive = "todo.plugins:Archive"
shell = "todo.plugins:Shell"

[tool.poetry.plugins."todo.project.test"]
test1 = "tests.project.test_config:TestContext1"
test2 = "tests.project.test_config:TestContext2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120 # YOLO
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

ignore = [
    "E501", # line too long, handled by black
    "C901", # too complex
]